screens/QuestionDetails/QuestionDetails.module.scss
@import "@/styles/_sass";

.questionDetail{
    width: 70%;
    margin: 0 auto;
    overflow: hidden;
    .questionHeader{
        text-align: center;
        margin-top: 50px;
        .title{
            @include h3;
            border-bottom: 1px solid $black;
            padding-bottom: 20px;
            margin-bottom: 20px;
        }
        .author{
            @include p2;
            margin-bottom: 25px;
            .authorName{
                text-decoration: underline;
            }
        }
        .tags {
            @include flex($wrap: wrap);
            @include p3;
            margin-bottom: 40px;
            gap: 10px;
            .tagName{
              padding: 5px;
              background-color: $main-blue;
            }
        }
    }
    .comments{
        h3{
            @include h3;
            text-align: center;
            font-weight: bold;
            margin: 70px 0 30px 0;
        }
        .comment{
            border-bottom: 2px solid $black;
            padding-bottom: 30px;
            .commentTitle{
                margin: 30px 0;
                font-weight: bold;
            }
        }
    }
    .commentsEmpty{
        @include p1;
        text-align: center;
    }
    @media (max-width: map-get($grid-breakpoints, lg)) {
        width: 90%;
        margin-top: 20px;
        .questionHeader {
          margin-top: 30px;
          .title {
            @include p1;
            padding-bottom: 15px;
            margin-bottom: 15px;
          }
          .author {
            @include p3;
            margin-bottom: 20px;
          }
    
          .tags {
            font-size: 12px;
            margin-bottom: 30px;
    
            .tagName {
              margin-left: 5px;
              padding: 3px;
            }
          }
        }
        .comments {
          .comment {
            padding-bottom: 20px;
    
            h3 {
              @include p2;
              margin: 40px 0;
            }
    
            .commentTitle {
              margin: 20px 0;
            }
          }
        }
        .commentsEmpty {
          @include p2;
        }
    }
}

